# luqui-misc

music/all/: index.pl  style.css
music/cur/: 1.MUS  10.MUS  101.MUS  103.MUS  105.MUS  108.MUS  109.MUS  11.MUS  12.MUS  13.MUS  14.MUS  15.MUS  16.MUS  17.MUS  18.MUS  19.MUS  2.MUS  20.ETF  20.MUS  21.MUS  22.MUS  23.MUS  24.MUS  25.MUS  26.MUS  27.MUS  28.MUS  29.MUS  2ndtheme.MUS  3.MUS  30.ETF  30.MUS  31.MUS  32.MUS  33.MUS  35.MUS  36.MUS  37.MUS  38.MUS  39.ETF  (+65 more)
music/improv/: 2005-07-12_2.mid  2005-07-15.mid  2005-07-15_2.mid  2005-07-17.mid  2005-07-19.mid  2005-07-20.mid  2005-07-20_2.mid  2005-07-21.mid  2005-07-21_2.mid  2005-07-23.mid  2005-07-24.mid  2005-07-25.mid  2005-08-02.mid  2005-08-10.mid  2005-08-10_2.mid  2005-08-11.mid  2005-08-15.mid  2005-08-20.mid  2005-08-24.mid  2005-08-28.mid  2005-09-03.mid  2005-09-04.mid  2005-09-05.mid  2005-09-07.mid  2005-09-10.mid  2005-09-12.mid  2005-09-13.mid  2005-12-20.mid  2005-12-20_2.mid  README
music/piano/: improv_2005-05-14.mid  improv_2005-07-12.mid
music/practice/: 2005-09-03-appassionata.mid  2005-09-03-moonlight.mid  2005-09-03-rach3.mid  README
music/sfx/: Balloon Leadbox.cmb  Brassbox.cmb  Ensemblebox.cmb  Sfxbox.cmb  Talkbox Leadbox.cmb  jambox.rns  (+3 more)
work/code/haskell/modules/data-ivar/: data-ivar.cabal
work/code/haskell/modules/data-ivar/Data/: IVar.hs
work/code/haskell/modules/data-memocombinators/: data-memocombinators.cabal
work/code/haskell/modules/data-memocombinators/Data/: MemoCombinators.hs
work/code/haskell/modules/graphics-drawingcombinators/: example.hs  graphics-drawingcombinators.cabal
work/code/haskell/modules/graphics-drawingcombinators/Graphics/: DrawingCombinators.hs
(+1455 files in other folders)
