Name: data-ivar
Description:
    Write-once variables, with the ability to block
    on the first of a set of variables to become 
    available.
Version: 0.1
Stability: experimental
Synopsis: Write-once variables with concurrency support
License: BSD3
Category: Data, Concurrency
Author: Luke Palmer
Maintainer: lrpalmer@gmail.com
Build-Type: Simple
Build-Depends: base
Exposed-Modules: Data.IVar
