Name: data-memocombinators
Description:
    Combinators for building memo tables.
Version: 0.1
Stability: experimental
Synopsis: Combinators for building memo tables.
License: BSD3
Category: Data
Author: Luke Palmer
Maintainer: lrpalmer@gmail.com
Build-Type: Simple
Build-Depends: base
Exposed-Modules: Data.MemoCombinators
