Name: graphics-drawingcombinators
Description:
    This module is a functional wrapper around OpenGL, so you don't
    have to go into the deep, dark world of imperative stateful
    programming just to draw stuff.  It supports 2D only (for now),
    with support drawing geometry, images, and text.
Version: 0.1
Stability: experimental
Synopsis: A functional interface to 2D drawing in OpenGL
License: LGPL
License-file: LICENSE
Category: Graphics
Author: Luke Palmer
Maintainer: lrpalmer@gmail.com
Build-Type: Simple
Build-Depends: base, mtl, sdl, sdl-image, sdl-ttf
Exposed-Modules: Graphics.DrawingCombinators
Extra-Source-Files: example.hs
